--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    <!-- Latest compiled and minified JavaScript -->
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	    
-	    <script src="integrate.js"></script>
+	    <script src="javascripts/main.js"></script>
 
 	 </head>
 
